retirados los comentarios

--- a/botones.html
+++ b/botones.html
@@ -44,9 +44,9 @@
                 <div class=" bg-blue-300 text-center  "><img src="img/scirocco.jpg" alt="" class="w-full h-full object-cover"></div>
                 <div class=" bg-blue-300 text-center  "><img src="img/polo.jpg" alt="" class="w-full h-full object-cover"></div>
                 <div class=" bg-blue-300 text-center  "><img src="img/vw-media-1.jpg" alt="" class="w-full h-full object-cover"></div>
-               <!--  <div class=" bg-blue-300 text-center  "><img src="img/vw-media-1.jpg" alt="" class="w-full h-full object-cover"></div>
                 <div class=" bg-blue-300 text-center  "><img src="img/vw-media-1.jpg" alt="" class="w-full h-full object-cover"></div>
-                <div class=" bg-blue-300 text-center  "><img src="img/vw-media-1.jpg" alt="" class="w-full h-full object-cover"></div> -->
+                <div class=" bg-blue-300 text-center  "><img src="img/vw-media-1.jpg" alt="" class="w-full h-full object-cover"></div>
+                <div class=" bg-blue-300 text-center  "><img src="img/vw-media-1.jpg" alt="" class="w-full h-full object-cover"></div> 
              
             
             </div>
